--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,15 +1,14 @@
 schemaVersion: 2.2.0
 metadata:
-  name: exhort
+  name: dependency-analytics
   version: 1.0.2
   provider: Red Hat
-  supportUrl: https://github.com/trustification/exhort/issues
+  supportUrl: https://github.com/guacsec/trustify-dependency-analytics/issues
   icon: https://github.com/fabric8-analytics/fabric8-analytics-vscode-extension/blob/master/icon/trusted_content_icon.png?raw=true
-  website: https://github.com/trustification/exhort
-  displayName: Exhort
-  description: Exhort
+  website: https://github.com/guacsec/trustify-dependency-analytics
+  displayName: Trustify Dependency Analytics
+  description: Trustify Dependency Analytics
   tags:
-    - Exhort
     - Dependency Analytics
     - Java
     - Quarkus
@@ -36,7 +35,7 @@ components:
       deployment/memoryRequest: 128Mi
       deployment/container-port: 9000
     kubernetes:
-      uri: deploy/exhort.yaml
+      uri: deploy/trust-da.yaml
       endpoints:
         - name: http
           targetPort: 8080
