--- a/src/main/docker/Dockerfile.multi-stage
+++ b/src/main/docker/Dockerfile.multi-stage
@@ -17,11 +17,11 @@ RUN ./mvnw verify -B -Dmaven.test.skip=true -Dquarkus.native.native-image-xmx=8g
 ## Stage 2 : create the docker final image
 FROM registry.access.redhat.com/ubi9/ubi-minimal:9.6-1760515502
 
-LABEL description="Red Hat Trusted Profile Analyzer - Exhort Backend Service"
-LABEL io.k8s.description="Red Hat Trusted Profile Analyzer - Exhort Backend Service"
-LABEL io.k8s.display-name="RHTPA Exhort"
-LABEL io.openshift.tags="rhtpa exhort"
-LABEL summary="The RHTPA Exhort backend exposes an API for allowing multiple clients \
+LABEL description="Trustify - Dependency Analytics Backend Service"
+LABEL io.k8s.description="Trustify - Dependency Analytics Backend Service"
+LABEL io.k8s.display-name="Trustify Dependency Analytics"
+LABEL io.openshift.tags="trustify dependency-analytics"
+LABEL summary="The Trustify Dependency Analytics backend exposes an API for allowing multiple clients \
 to submit an SPDX or CycloneDX SBOM of their project and get a vulnerability report"
 
 WORKDIR /work/
