--- a/src/main/docker/Dockerfile.native-micro
+++ b/src/main/docker/Dockerfile.native-micro
@@ -10,11 +10,11 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native-micro -t quarkus/exhort .
+# docker build -f src/main/docker/Dockerfile.native-micro -t quarkus/dependency-analytics .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/exhort
+# docker run -i --rm -p 8080:8080 quarkus/dependency-analytics
 #
 ###
 FROM quay.io/quarkus/quarkus-micro-image:3.0
