feat: separate Red Hat and Community profiles for HTML report (#522)
* feat: separate Red Hat and Community profiles for HTML report

* feat: updat general solution for backend

* feat: add imageRecommendation refactor to programmatically get brandingConfig and update README

* fix: simplify the logic

fix: add imageRemediationLink

fix: adapt HtmlReportTest by adding imageRecommend and imageRemediationLink to test configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,3 +62,13 @@ quarkus.hibernate-orm.sql-load-script=no-file
 %prod.quarkus.datasource.jdbc.url=jdbc:postgresql://${db.postgres.host}:${db.postgres.port}/${db.postgres.database}?sslmode=${db.postgres.sslmode}
 %prod.quarkus.datasource.username=${db.postgres.user}
 %prod.quarkus.datasource.password=${db.postgres.password}
+
+# ====================================================================
+# Branding Configuration Profiles
+# ====================================================================
+
+# Default branding configuration (Community/Trustify) Example:
+#branding.display.name=Trustify
+#branding.explore.url=https://guac.sh/trustify/
+#branding.explore.title=Learn more about Trustify
+#branding.explore.description=The Trustify project is a collection of software components that enables you to store and retrieve Software Bill of Materials (SBOMs), and advisory documents.
