--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -15,3 +15,11 @@ quarkus.hibernate-orm.sql-load-script=db/h2/V2__insert_data.sql
 provider.trustify.auth.server-url=${keycloak.url}/realms/trustify
 provider.trustify.auth.client-id=test-trustify-client
 provider.trustify.auth.client-secret=test-trustify-secret
+
+# Branding configuration for testing
+branding.display-name=Trustify Test
+branding.explore-url=https://guac.sh/trustify/
+branding.explore-title=Learn more about Trustify
+branding.explore-description=The Trustify project is a collection of software components that enables you to store and retrieve Software Bill of Materials (SBOMs), and advisory documents.
+branding.image-recommendation=Test container image recommendations for enhanced security.
+branding.image-remediation-link=https://test-catalog.example.com/containers/
