--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -72,3 +72,7 @@ quarkus.hibernate-orm.sql-load-script=no-file
 #branding.explore.url=https://guac.sh/trustify/
 #branding.explore.title=Learn more about Trustify
 #branding.explore.description=The Trustify project is a collection of software components that enables you to store and retrieve Software Bill of Materials (SBOMs), and advisory documents.
+# Note: For native images, you can either:
+# 1. Set directly: -Dquarkus.datasource.jdbc.url=jdbc:postgresql://... (overrides everything)
+# 2. Use environment variables: DB_POSTGRES_HOST, DB_POSTGRES_PORT, etc.
+# 3. Use custom properties: -Ddb.postgres.host=... (works in JVM mode, may need explicit profile in native)
