feat: trustify recommendations (#526)
* feat: trustify recommendations

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

* feat: remove redis requirement and refactor tc package

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

* feat: use repository_url as main remediation link

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

* chore: remove REDIS dependency from deployment

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

* chore: add unit test and remove unused constant

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

* chore: update recommendations html report

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

---------

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
-# %dev.quarkus.log.level=DEBUG
+%dev.quarkus.log.level=DEBUG
 
 project.shortname=${pom.artifactId}
 project.id=${pom.groupId}:${pom.artifactId}
 project.name=${pom.name}
 project.version=${pom.version}
 project.build=${timestamp}
-
-api.trustedcontent.host=https://exhort.trust.rhcloud.com/api/v1/
 
 api.onguard.host=http://onguard:8080/
 api.onguard.management.host=http://onguard:9000/
@@ -43,7 +41,6 @@ trustedcontent.recommendation.ubi.mapping.debian=${trustedcontent.recommendation
 trustedcontent.recommendation.ubi.mapping.fedora=${trustedcontent.recommendation.ubi.purl.ubi9}
 trustedcontent.recommendation.ubi.mapping.amazonlinux=${trustedcontent.recommendation.ubi.purl.ubi9}
 
-%prod.quarkus.redis.hosts=redis://${db.redis.host:localhost}:${db.redis.port:6379}/
 %dev.quarkus.keycloak.devservices.enabled=false
 
 # Configure your datasource
