feat: use deps.dev for remediation info (#528)
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,8 @@ api.onguard.management.host=http://onguard:9000/
 # provider.trustify.auth.client-id=${TRUSTIFY_CLIENT_ID}
 # provider.trustify.auth.client-secret=${TRUSTIFY_CLIENT_SECRET}
 
-report.nvd.issue.regex=https://nvd.nist.gov/vuln/detail/__ISSUE_ID__
-report.cve.issue.regex=https://cve.mitre.org/cgi-bin/cvename.cgi?name=__ISSUE_ID__
+report.cve.issue.regex=https://nvd.nist.gov/vuln/detail/__ISSUE_ID__
+report.remediation.template=https://deps.dev/__PACKAGE_TYPE__/__PACKAGE_NAME__/__PACKAGE_VERSION__
 
 ## Monitoring - Sentry
 # monitoring.enabled=true
