feat: cache trustify responses (#542)
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,10 @@
         <artifactId>quarkus-flyway</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-redis-client</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.camel.quarkus</groupId>
       <artifactId>camel-quarkus-junit5</artifactId>
       <scope>test</scope>
