--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,6 +55,9 @@ quarkus.flyway.baseline-version=0
 # Disable Hibernate schema generation (let Flyway handle it)
 quarkus.hibernate-orm.sql-load-script=no-file
 
+# Redis configuration
+%prod.quarkus.redis.hosts=redis://${db.redis.host:localhost}:${db.redis.port:6379}/
+
 # Production database configuration
 %prod.quarkus.datasource.jdbc.url=jdbc:postgresql://${db.postgres.host}:${db.postgres.port}/${db.postgres.database}?sslmode=${db.postgres.sslmode}
 %prod.quarkus.datasource.username=${db.postgres.user}
