fix: error handling and misses caching (#552)
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -16,6 +16,9 @@ provider.trustify.auth.server-url=${keycloak.url}/realms/trustify
 provider.trustify.auth.client-id=test-trustify-client
 provider.trustify.auth.client-secret=test-trustify-secret
 
+# Timeout configuration for testing (1 second for faster timeout tests)
+api.trustify.timeout=1s
+
 # Branding configuration for testing
 branding.display-name=Trustify Test
 branding.explore-url=https://guac.sh/trustify/
