--- a/ui/.gitignore
+++ b/ui/.gitignore
@@ -5,6 +5,12 @@
 /.pnp
 .pnp.js
 
+# Yarn Berry
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+
 # testing
 /coverage
 
