feat: implement oss-license package scanning (#561)
* feat: add oss license report and endpoint

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

* feat: implement oss license endpoint and in the analysis report

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

Co-authored-by: qodo-code-review[bot] <151058649+qodo-code-review[bot]@users.noreply.github.com>

* chore: update README, fix license caching and add missing non-verbose license data

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

---------

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>
Co-authored-by: qodo-code-review[bot] <151058649+qodo-code-review[bot]@users.noreply.github.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,8 @@ project.build=${timestamp}
 report.cve.issue.regex=https://nvd.nist.gov/vuln/detail/__ISSUE_ID__
 report.remediation.template=https://deps.dev/__PACKAGE_TYPE__/__PACKAGE_NAME__/__PACKAGE_VERSION__
 
+api.licenses.depsdev.host=https://api.deps.dev
+
 ## Monitoring - Sentry
 # monitoring.enabled=true
 # monitoring.sentry.dsn=https://<some-uuid>@app.glitchtip.com/<some-id>
