--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,5 @@
-#quarkus.log.level=DEBUG
-#quarkus.log.category."com.github.tomakehurst".level=DEBUG
+# quarkus.log.level=DEBUG
+# quarkus.log.category."com.github.tomakehurst".level=DEBUG
 telemetry.disabled=true
 api.trustify.disabled=false
 quarkus.hibernate-orm.persistence-xml.ignore=true
@@ -18,7 +18,7 @@ provider.trustify.auth.client-secret=test-trustify-secret
 
 # Timeout configuration for testing (1 second for faster timeout tests)
 api.trustify.timeout=1s
-
+api.licenses.depsdev.timeout=1s
 # Branding configuration for testing
 branding.display-name=Trustify Test
 branding.explore-url=https://guac.sh/trustify/
