--- a/ui/package.json
+++ b/ui/package.json
@@ -60,6 +60,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-destructuring": "^7.25.9",
     "@craco/craco": "^7.1.0",
+    "eslint": "^8.57.1",
     "prettier": "^3.0.1"
   },
   "packageManager": "yarn@4.12.0+sha512.f45ab632439a67f8bc759bf32ead036a1f413287b9042726b7cc4818b7b49e14e9423ba49b18f9e06ea4941c1ad062385b1d8760a8d5091a1a31e5f6219afca8"
